force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/SVMXA360__SM_MaintenancePlan__c.object-meta.xml
<CustomObject>
    <description>A360 Maintenance Plans are ServiceMax&apos;s purpose-built solution to complete, asset-centric preventive maintenance. A360 Maintenance Plans provide dynamic work order generation for assets based on time, frequency, and criteria-specific conditions. By leveraging Asset 360&apos;s Technical Attributes functionality, A360 Maintenance Plans can manage regular, condition-based intervals of maintenance work, driven by the attribute readings of an asset. This object represents the header maintenance plan record, which serves as the hub for all associated assets (as Asset 360 maintenance plan assets) and work rules (Asset 360 Work Rules) with conditions. A360 maintenance plans can be associated with accounts, locations, and service contracts. They leverage work types for additional configurability of generated work orders.</description>
    <label>A360 Maintenance Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Plan Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A360 Maintenance Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>