force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__Account__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated account, which typically represents the customer receiving the maintenance service.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>A360 Maintenance Plans</relationshipLabel>
    <relationshipName>A360_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>