force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__CanceledBy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CanceledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated User who canceled the plan</description>
    <label>Canceled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>A360_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>