force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__CanceledOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CanceledOn__c</fullName>
    <description>The date when the plan is canceled.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Canceled On</label>
    <type>Date</type>
</CustomField>