force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CancellationReason__c</fullName>
    <description>The indicated reason for canceling the plan.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>