force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__EndDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EndDate__c</fullName>
    <description>The last day the maintenance plan is valid. This date value may be auto-populated in the Maintenance Plan Creation flow, based on the MP Template&apos;s indicated Plan Duration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>