force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated location, which typically represents the customer location that is covered by the maintenance service.</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>A360 Maintenance Plans</relationshipLabel>
    <relationshipName>A360_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>