force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__MaintenancePlanProcessId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanProcessId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field indicates which Maintenance Plan Process will review and process the maintenance plan. Each maintenance plan can only be associated to one MP Process. If the field is left blank, the Maintenance Plan will be processed using the default standard MP Process.</description>
    <label>A360 Maintenance Plan Process</label>
    <referenceTo>SVMXA360__SM_MaintenancePlanProcess__c</referenceTo>
    <relationshipLabel>A360 Maintenance Plans (A360 Maintenance Plan Process)</relationshipLabel>
    <relationshipName>A360_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>