force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__MaintenancePlanTemplate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Maintenance Plan Template used for creating the maintenance plan.</description>
    <label>Maintenance Plan Template</label>
    <referenceTo>SVMXA360__MaintenancePlanTemplate__c</referenceTo>
    <relationshipLabel>A360 Maintenance Plans</relationshipLabel>
    <relationshipName>A360_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>