force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__ServiceContract__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The service contract associated with the maintenance plan.</description>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>A360 Maintenance Plans</relationshipLabel>
    <relationshipName>A360_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>