force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__StartDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StartDate__c</fullName>
    <description>The first day the maintenance plan is valid.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>