force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Status__c</fullName>
    <description>The status of the maintenance plan. The default values are Draft, Active, On Hold, Canceled, or Completed.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>OnHold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>