force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__WorkOrderCompletionBasedOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderCompletionBasedOn__c</fullName>
    <description>Date/Time field on work order based on which work order closure is considered</description>
    <inlineHelpText>Indicate which Date/Time field on the Work Order will be used to inform Interval Adjustment and Work Order generation, when processing based on the completion of a previous Work Order.</inlineHelpText>
    <label>Work Order Completion is Based On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SVMXA360__ClosedDate__c</fullName>
                <label>Closed Date</label>
            </value>
            <value>
                <fullName>SVMXA360__CompletedDate__c</fullName>
                <label>Completed Date</label>
            </value>
            <value>
                <fullName>EndDate</fullName>
                <label>End Date</label>
            </value>
            <value>
                <fullName>SlaExitDate</fullName>
                <label>Entitlement Process End Time</label>
            </value>
            <value>
                <fullName>SlaStartDate</fullName>
                <label>Entitlement Process Start Time</label>
            </value>
            <value>
                <fullName>StopStartDate</fullName>
                <label>Stopped Since</label>
            </value>
            <value>
                <fullName>StartDate</fullName>
                <label>Start Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>