force-app/main/default/objects/SVMXA360__SM_MaintenancePlan__c/fields/SVMXA360__WorkType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated work type. Work orders generated from the maintenance plan inherit its work type’s duration, required skills and products, and linked articles. Maintenance assets covered by the plan use the this work type, unless a work type has been assigned to them at the Maintenance Asset Level.</description>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>A360 Maintenance Plans</relationshipLabel>
    <relationshipName>A360_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>